--- a/config/database.yml
+++ b/config/database.yml
@@ -12,17 +12,17 @@ default: &default
 
 development:
   <<: *default
-  database: db/development
+  database: zhihu-daily-development
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: db/test
+  database: zhihu-daily-test
 
 production:
   <<: *default
-  database: db/production
+  database: zhihu-daily-production
   username: ruby-getting-started
   password: <%= ENV['RUBY-GETTING-STARTED_DATABASE_PASSWORD'] %>
